--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>org.ballerinalang</groupId>
     <artifactId>salesforcerest-connector-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.95.1-SNAPSHOT</version>
+    <version>0.95.2</version>
     <name>Ballerina - Salesforce REST Connector ParentParent</name>
 
     <url>http://ballerinalang.org</url>
@@ -255,7 +255,7 @@
         </plugins>
     </build>
     <properties>
-        <ballerina.version>0.95.1-SNAPSHOT</ballerina.version>
+        <ballerina.version>0.95.2</ballerina.version>
         <maven.findbugsplugin.version.exclude>findbugs-exclude.xml</maven.findbugsplugin.version.exclude>
         <docerina.version>${ballerina.version}</docerina.version>
         <mvn.processor.plugin.version>2.2.4</mvn.processor.plugin.version>
