--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>org.ballerinalang</groupId>
     <artifactId>salesforcerest-connector-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.95.0</version>
+    <version>0.95.0-SNAPSHOT</version>
     <name>Ballerina - Salesforce REST Connector ParentParent</name>
 
     <url>http://ballerinalang.org</url>
