--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,9 @@
         <connection>scm:git:https://github.com/ballerinalang/connector-salesforcerest.git</connection>
         <tag>HEAD</tag>
     </scm>
+    <modules>
+        <module>component</module>
+    </modules>
     <profiles>
         <profile>
             <id>default</id>
